test hide create button mobile

--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   }
 
   /* Hide pedal counts */
-  #pedalCount {
+  #pedalCount, #createPedalBtn {
     display: none !important;
   }
 
