--- a/style.css
+++ b/style.css
@@ -387,8 +387,8 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 
 
   /* Generic hide/show desktop*/
-  #showDesktop { display: block !important; }
-  #showMobile { display: none !important; }
+  .showDesktop { display: block !important; }
+  .showMobile { display: none !important; }
 
 /* =========================
    Mobile / Small screen adjustments
@@ -396,8 +396,8 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 @media (max-width: 768px) {
 
   /* Generic hide/show mobile */
-  #showDesktop { display: none !important; }
-  #showMobile { display: block !important; }
+  .showDesktop { display: none !important; }
+  .showMobile { display: block !important; }
 
   header .title {
     display: none !important;
