--- a/style.css
+++ b/style.css
@@ -398,6 +398,17 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   /* Generic hide/show mobile */
   .showDesktop { display: none !important; }
   .showMobile { display: block !important; }
+  .showMobile.bx--btn--icon-only {
+    width: 2.5rem;   /* 40px */
+    height: 2.5rem;  /* 40px */
+    min-width: 2.5rem;
+    min-height: 2.5rem;
+    display: inline-flex;      /* keep icon centered */
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    flex: none;               /* prevent flex gap from shrinking */
+  }
 
   header .title {
     display: none !important;
@@ -488,6 +499,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   #renamePresetBtn {
     flex: 0 0 auto; /* keep button size */
   }
+
 }
 
  
