--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ html { box-sizing: content-box !important; }
 #pedalAddDropdownContainer { background: white; max-height: 300px; overflow-y: auto; width: 200px; z-index: 1000; }
 #catalog, #selected-pedals { margin-top: 1rem; min-height: 2rem; }
 #catalog, #preset { display: flex; flex-wrap: wrap; gap: 10px; /*justify-content: center;*/ max-width: 100vw; white-space: normal; }
+#catalog, #preset { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; max-width: 100vw; white-space: normal; }
 #pedalboard { display: flex; flex-direction: column; gap: 10px; align-items: center; }
 .pedal-catalog, .pedal { border-radius: 10px; padding: 12px; display: flex; flex-direction: column; align-items: center; position: relative; }
 .pedal-catalog[style*="display: none"] { display: none !important; }
