--- a/style.css
+++ b/style.css
@@ -501,7 +501,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   position: absolute; right: -14px; top: 50%; transform: translateY(-50%); background: none; border: none; cursor: pointer;
 }
 
-#zoom-controls {
+.zoom-controls {
   position: fixed;
   bottom: -25px;
   right: 0px;
