--- a/style.css
+++ b/style.css
@@ -359,21 +359,34 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 .modal-footer { display: block; margin: auto; position: relative; padding-bottom: 40px; }
 
 /* Fonts (all preserved) */
-@font-face { font-family: bigmuff, pioneer; src: url("fonts/ITC\ Pioneer\ Regular.otf"); }
+@font-face { font-family: bigmuff; src: url("fonts/ITC\ Pioneer\ Regular.otf"); }
+@font-face { font-family: pioneer; src: url("fonts/ITC\ Pioneer\ Regular.otf"); }
 @font-face { font-family: boss; src: url("fonts/BossStyle-Bold.otf"); }
-@font-face { font-family: amped, bebasneue; src: url("fonts/BebasNeue-Regular.otf"); }
-@font-face { font-family: mxr, eurostile; src: url("fonts/eurostile.TTF"); }
-@font-face { font-family: tsmini, schluber; src: url("fonts/Schluber.otf"); }
-@font-face { font-family: sp, lobster; src: url("fonts/Lobster-Regular.ttf"); }
+@font-face { font-family: amped; src: url("fonts/BebasNeue-Regular.otf"); }
+@font-face { font-family: bebasneue; src: url("fonts/BebasNeue-Regular.otf"); }
+@font-face { font-family: mxr; src: url("fonts/eurostile.TTF"); }
+@font-face { font-family: eurostyle; src: url("fonts/eurostile.TTF"); }
+@font-face { font-family: tsmini; src: url("fonts/Schluber.otf"); }
+@font-face { font-family: schluber; src: url("fonts/Schluber.otf"); }
+@font-face { font-family: sp; src: url("fonts/Lobster-Regular.ttf"); }
+@font-face { font-family: lobster; src: url("fonts/Lobster-Regular.ttf"); }
 @font-face { font-family: orangeamps; src: url("fonts/AmpedOrange.ttf"); }
+@font-face { font-family: ampedorange; src: url("fonts/AmpedOrange.ttf"); }
 @font-face { font-family: marshall; src: url("fonts/Amplify_PersonalUseOnly.ttf"); }
+@font-face { font-family: amplify; src: url("fonts/Amplify_PersonalUseOnly.ttf"); }
 @font-face { font-family: vox; src: url("fonts/PlayfairDisplay-Black.ttf"); }
+@font-face { font-family: playfair; src: url("fonts/PlayfairDisplay-Black.ttf"); }
 @font-face { font-family: bubbly; src: url("fonts/Talina.otf"); }
+@font-face { font-family: talina; src: url("fonts/Talina.otf"); }
 @font-face { font-family: ibanez; src: url("fonts/SecretAgentPersonalUse-vPzE.ttf"); }
+@font-face { font-family: secretagent; src: url("fonts/SecretAgentPersonalUse-vPzE.ttf"); }
 @font-face { font-family: fender; src: url("fonts/StratoRegular-2d5o.ttf"); }
+@font-face { font-family: strato; src: url("fonts/StratoRegular-2d5o.ttf"); }
 @font-face { font-family: walrus; src: url("fonts/acumin-pro-condensed.otf"); }
+@font-face { font-family: acumin; src: url("fonts/acumin-pro-condensed.otf"); }
 @font-face { font-family: yamaha; src: url("fonts/yamaha.ttf"); }
 @font-face { font-family: strymon1; src: url("fonts/dinot-regular.otf"); }
+@font-face { font-family: dinot; src: url("fonts/dinot-regular.otf"); }
 @font-face { font-family: moonieeyes; src: url("fonts/MoonieEyes.otf"); }
 @font-face { font-family: goldenhills; src: url("fonts/GoldenHills.ttf"); }
 @font-face { font-family: cute; src: url("fonts/cute.ttf"); }
@@ -381,10 +394,13 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 @font-face { font-family: funky; src: url("fonts/TF\ Funky\ Fusion\ Demo.ttf"); }
 @font-face { font-family: balloon; src: url("fonts/balloon.TTF"); }
 @font-face { font-family: fuzzface; src: url("fonts/staccato.TTF"); }
+@font-face { font-family: staccato; src: url("fonts/staccato.TTF"); }
 @font-face { font-family: compacta; src: url("fonts/CompactaPlain.ttf"); }
 @font-face { font-family: mesa; src: url("fonts/Cowboys\ 2.0.otf"); }
+@font-face { font-family: cowboys; src: url("fonts/Cowboys\ 2.0.otf"); }
 @font-face { font-family: dookie; src: url("fonts/Bad\ Dookie\ NF\ Regular.ttf"); }
 @font-face { font-family: script; src: url("fonts/Avenue\ de\ Madison.ttf"); }
+@font-face { font-family: avenue; src: url("fonts/Avenue\ de\ Madison.ttf"); }
 @font-face { font-family: cloister; src: url("fonts/CloisterBlack.ttf"); }
 @font-face { font-family: stencil; src: url("fonts/Stencilia-A.ttf"); }
 @font-face { font-family: broken; src: url("fonts/BROKEN74.TTF"); }
@@ -398,6 +414,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 @font-face { font-family: monsters; src: url("fonts/MonstersHeart-Regular.ttf"); }
 @font-face { font-family: magneto; src: url("fonts/MAGNETOB.TTF"); }
 @font-face { font-family: mistress; src: url("fonts/knuckled.ttf"); }
+@font-face { font-family: knuckled; src: url("fonts/knuckled.ttf"); }
 @font-face { font-family: bolton; src: url("fonts/Bolton.ttf"); }
 @font-face { font-family: MIB; src: url("fonts/MIB.ttf"); }
 @font-face { font-family: thorema; src: url("fonts/thorema-demo.regular.ttf"); }
