--- a/style.css
+++ b/style.css
@@ -455,6 +455,38 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   top: -10px;
   border-radius: 4px;
 }
+.diamond-plate-black {
+  display: block;
+  position: relative;
+  background-color: #363437;
+  background-image:
+    linear-gradient(144deg, rgba(150,150,150,1) 10px, transparent 11px),
+    linear-gradient(-34deg, rgba(150,150,150,1) 10px, transparent 11px),
+    linear-gradient(132deg, rgba(255,255,255, 1) 10px, transparent 11px),
+    linear-gradient(128deg, rgba(200,200,200, 0.7) 10px, transparent 11px),
+    linear-gradient(-41deg, rgba(200,200,200, 1) 11px, transparent 12px),
+    linear-gradient(-52deg, rgba(255,255,255, 1) 11px, transparent 12px),
+    linear-gradient(-125deg, rgba(150,150,150,1) 10px, transparent 11px),
+    linear-gradient(55deg, rgba(150,150,150,1) 10px, transparent 11px),
+    linear-gradient(-132deg, rgba(200,200,200, 1) 10px, transparent 11px),
+    linear-gradient(-141deg, rgba(255,255,255, 1) 10px, transparent 11px),
+    linear-gradient(42deg, rgba(255,255,255, 1) 11px, transparent 12px),
+    linear-gradient(38deg, rgba(200,200,200, 0.5) 11px, transparent 12px);
+  background-size: 40px 40px;
+  background-position:
+    -6px 4px, -5px -5px,
+    -5px 5px, -5px 6px,
+    -5px -5px, -5px -6px,
+    -9px 0px, -1px 0px, 
+    -10px 0px, -11px 0px,
+    -1px 0px, 0px 0px;
+  background-repeat: repeat;
+  height: 0;
+  width: auto;
+  padding-bottom: 72px;
+  top: -10px;
+  border-radius: 4px;
+}
 
 /* =========================
    Responsive Merged Rules
