--- a/style.css
+++ b/style.css
@@ -460,14 +460,14 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   position: relative;
   background-color: #363437;
   background-image:
-    linear-gradient(144deg, rgba(150,150,150,1) 10px, transparent 11px),
-    linear-gradient(-34deg, rgba(150,150,150,1) 10px, transparent 11px),
+    linear-gradient(144deg,#363437 10px, transparent 11px),
+    linear-gradient(-34deg, #363437 10px, transparent 11px),
     linear-gradient(132deg, rgba(255,255,255, 1) 10px, transparent 11px),
     linear-gradient(128deg, rgba(200,200,200, 0.7) 10px, transparent 11px),
     linear-gradient(-41deg, rgba(200,200,200, 1) 11px, transparent 12px),
     linear-gradient(-52deg, rgba(255,255,255, 1) 11px, transparent 12px),
-    linear-gradient(-125deg, rgba(150,150,150,1) 10px, transparent 11px),
-    linear-gradient(55deg, rgba(150,150,150,1) 10px, transparent 11px),
+    linear-gradient(-125deg, #363437 10px, transparent 11px),
+    linear-gradient(55deg, #363437 10px, transparent 11px),
     linear-gradient(-132deg, rgba(200,200,200, 1) 10px, transparent 11px),
     linear-gradient(-141deg, rgba(255,255,255, 1) 10px, transparent 11px),
     linear-gradient(42deg, rgba(255,255,255, 1) 11px, transparent 12px),
