--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 .modal-footer { display: block; margin: auto; position: relative; padding-bottom: 40px; }
 
 /* Fonts (all preserved) */
+@font-face { font-family: urban; src: url("../fonts/Urban\ Heroes.ttf"); }
 @font-face { font-family: bigmuff; src: url("../fonts/ITC\ Pioneer\ Regular.otf"); }
 @font-face { font-family: pioneer; src: url("../fonts/ITC\ Pioneer\ Regular.otf"); }
 @font-face { font-family: boss; src: url("../fonts/BossStyle-Bold.otf"); }
